--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <body>　
   <font size="7">aspou2413の公式ホームページ</size>
   <hr noshade>
-  <font size="3">今まで作ったサイト一覧</br>
-  <a href="https://aspou2413.github.io/404%20Not%20Found.html%22%3E
+  <font size="5">今まで作ったサイト一覧</br>
+  <a href="https://aspou2413.github.io/404NotFound.html>
    404 Not Found</a><br>
  </body>
  
