--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <hr noshade>
   <font size="5">今まで作ったサイト一覧</br>
   <a href="https://aspou2413.github.io/404NotFound.html>404 Not Found</a><br>
+  <a href="https://aspou2413.github.io/404NotFound.html">
+  １つ上のindex.htmlファイルにリンクしています。</a><br>
  </body>
  
 </html>
