--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <font size="7">aspou2413の公式ホームページ</size>
   <hr noshade>
   <font size="5">今まで作ったサイト一覧</br>
-  <a href="https://aspou2413.github.io/404NotFound.html>404 Not Found</a><br>
   <a href="https://aspou2413.github.io/404NotFound.html">
-  １つ上のindex.htmlファイルにリンクしています。</a><br>
+  404 Not Found</a><br>
  </body>
  
 </html>
