--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <font size="7">aspou2413の公式ホームページ</size>
   <hr noshade>
   <font size="5">趣味程度にやっている事</size></br>
-  <font size="3"><a href="https://aspou2413.github.io/blog.html">
+  <font size="3"><a href="https://aspou2413.github.io/blog.html"target="_blank">
   Blog</a><br>
   <font size="5">今まで作ったサイト一覧</size></br>
-  <font size="3"><a href="https://aspou2413.github.io/404NotFound.html">
+  <font size="3"><a href="https://aspou2413.github.io/404NotFound.htmltarget="_blank">
   404 Not Found</a><br>
  </body>
  
