--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <font size="3"><a href="https://aspou2413.github.io/blog.html"target="_blank">
   Blog</a><br>
   <font size="5">今まで作ったサイト一覧</size></br>
-  <font size="3"><a href="https://aspou2413.github.io/404NotFound.htmltarget="_blank">
+  <font size="3"><a href="https://aspou2413.github.io/404NotFound.html"target="_blank">
   404 Not Found</a><br>
  </body>
  
