--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <font size="5">今まで作ったサイト一覧</size></br>
   <font size="3"><a href="https://aspou2413.github.io/404NotFound.html"target="_blank">
   404 Not Found</a><br>
-   <font size="3"><a href="https://aspou2413.github.io/404NotFound.html"target="_blank">
+   <font size="3"><a href="https://aspou2413.github.io/GamingPage.html"target="_blank">
   ゲーミングページ</a><br>
  </body>
  
