--- a/GamingPage.html
+++ b/GamingPage.html
@@ -1,7 +1,7 @@
 <html>
 
  <head>
-  <title>サンプルページ</title>
+  <title>ゲーミングだね！！！！</title>
  </head>
 
   <frame name="1" src="https://aspou2413.github.io/frame1.html">
