--- a/GamingPage.html
+++ b/GamingPage.html
@@ -4,8 +4,8 @@
   <title>ゲーミングだね！！！！</title>
  </head>
 
-  <frame name="1" src="https://aspou2413.github.io/frame1.html">
-  <frame name="2" src="https://aspou2413.github.io/frame2.html">
+  <frame name="1" src="frame1.html">
+  <frame name="2" src="frame2.html">
  </frameset>
 
 </html>
