--- a/GamingPage.html
+++ b/GamingPage.html
@@ -3,9 +3,13 @@
  <head>
   <title>ゲーミングだね！！！！</title>
  </head>
-
-  <frame name="1" src="frame1.html">
-  <frame name="2" src="frame2.html">
- </frameset>
-
+<frameset cols="200,200,*">
+<frame src="frame1.html" name="mado1">
+<frame src="frame2.html" name="mado2">
+<noframes>
+<body>
+フレーム未対応の方のために、ここに説明を書き込みます。
+</body>
+</noframes>
+</frameset>
 </html>
