--- a/GamingPage.html
+++ b/GamingPage.html
@@ -3,12 +3,11 @@
  <head>
   <title>ゲーミングだね！！！！</title>
  </head>
-<frameset cols="200,200,*">
 <frame src="frame1.html" name="mado1">
 <frame src="frame2.html" name="mado2">
 <noframes>
 <body>
-フレーム未対応の方のために、ここに説明を書き込みます。
+フレームができないからゲーミングじゃないね！！！！
 </body>
 </noframes>
 </frameset>
