--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
  </head>
 
  <body>　
+  <body bgcolor="#99ff99">
+これで背景色が緑に変わっていたら成功です！
+</body>
   <font size="7">aspou2413の公式ホームページ</size>
   <hr noshade>
   <font size="5">趣味程度にやっている事</size></br>
