--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
  <body>　
   <body bgcolor="#99ff99">
-これで背景色が緑に変わっていたら成功です！
-</body>
-  <font size="7">aspou2413の公式ホームページ</size>
+  <font size="7">aspou2413の公式ホームページ</size></br>
+  Blogが押せなくなっております。すぐに復旧をしますのでしばらくお待ちください。
   <hr noshade>
   <font size="5">趣味程度にやっている事</size></br>
   <font size="3"><a href="https://aspou2413.github.io/blog.html"target="_blank">
-  Blog</a><br>
+  ブログ</a><br>
   <font size="5">今まで作ったサイト一覧</size></br>
   <font size="3"><a href="https://aspou2413.github.io/404NotFound.html"target="_blank">
   404 Not Found</a><br>
