--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body>　
   <body bgcolor="#99ff99">
   <font size="7">aspou2413の公式ホームページ</size></br>
-  Blogが押せなくなっております。すぐに復旧をしますのでしばらくお待ちください。
+  <font size="4">Blogが押せなくなっております。すぐに復旧をしますのでしばらくお待ちください。<size>
   <hr noshade>
   <font size="5">趣味程度にやっている事</size></br>
   <font size="3"><a href="https://aspou2413.github.io/blog.html"target="_blank">
