--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <font size="5">今まで作ったサイト一覧</size></br>
   <font size="3"><a href="https://aspou2413.github.io/404NotFound.html"target="_blank">
   404 Not Found</a><br>
+     <input type="button" onclick="location.href='https://aspou2413.github.io/404NotFound.html'" value="404 Not Found">
  </body>
  
 </html>
