--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <font size="7">aspou2413の公式ホームページ</size></br>
   <hr noshade>
   <font size="5">今まで作ったサイト一覧</size></br>
-  <font size="3"><a href="https://aspou2413.github.io/404NotFound.html"target="_blank">
-  404 Not Found</a><br>
-     <input type="button" onclick="location.href='https://aspou2413.github.io/404NotFound.html'" value="404 Not Found">
+<input type="button" onclick="location.href='https://aspou2413.github.io/404NotFound.html'" value="404 Not Found"><br>
  </body>
  
 </html>
