--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
  <body>　
   <font size="7">aspou2413の公式ホームページ</size></br>
+ <!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d487_f8_022/60c5f71af37e5/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0" ><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table><!--ここまで-->
+
   <hr noshade>
   <font size="5">今まで作ったサイト一覧</size></br>
 <input type="button" onclick="location.href='https://aspou2413.github.io/404NotFound.html'" value="404 Not Found"><br>
